<resources>
    <string name="app_name">N.E.A.T.</string>
    <string name="forward">Forward</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="backward">Backward</string>
    <string name="manual_mode">Manual Mode</string>
    <string name="arrow_pointing_upwards">arrow pointing upwards</string>
    <string name="arrow_pointing_downwards">arrow pointing downwards</string>
    <string name="arrow_pointing_right">arrow pointing right</string>
    <string name="arrow_pointing_left">arrow pointing left</string>
    <string name="arrow_rotating_anti_clockwise">arrow rotating anti-clockwise</string>
    <string name="arrow_rotating_clockwise">arrow rotating clockwise</string>
    <string name="follow_me">follow me</string>
    <string name="come_to_me">come to me</string>
    <string name="connect_robot">connect to robot</string>
    <string name="exception_alert">Robot status alert</string>
    <string name="positive">OK</string>
    <string name="lift_controls">Lift Controls</string>
    <string name="logo">logo</string>
    <string name="settings">settings</string>
    <string name="version">version</string>
    <string name="speed">speed</string>
    <string name="battery">battery</string>
    <string name="enable_notification">enable notification</string>
    <string name="enable_vibrate">vibrate on operation</string>
    <string name="counter_height">counter height</string>
    <string name="table_height">table height</string>
    <string name="base_height">base height</string>
    <string name="diagonal_arrow_top_right">diagonal_arrow_top_right</string>
    <string name="diagonal_arrow_bottom_left">diagonal_arrow_bottom_left</string>
    <string name="diagonal_arrow_bottom_right">diagonal_arrow_bottom_right</string>
    <string name="diagonal_arrow_top_left">diagonal_arrow_top_left</string>
    <string name="connect_to_your_n_e_a_t">Connect to your N.E.A.T.</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="stop">stop</string>
</resources>
